# helix-demo-stitcher

./: .gitignore  COMMANDS_REFERENCE.md  QUICK_REF.md  README.md  component-diagram.md  dashboard.html  docker-compose.yml  plan-helixDemoStitcher.prompt.md  shutdown_demo.sh  startup_demo.sh
a2a/: .env.template  README.md  dashboard.html  docker-compose.yml
agent_registry/: docker-compose.yml
helix/: .env.template  docker-compose.yml
helix/config/: application.conf
mcp_apps/: Dockerfile  README.md  dashboard.html  docker-compose.yml
mcp_apps/config/: application.conf
mcp_apps/mcp_query_duckdb/: Dockerfile  entrypoint.sh  mcp_server.conf  pyproject.toml
mcp_apps/mcp_query_duckdb/data/: DATASET_GUIDE.md  csv_to_duckdb.py  export_duckdb_to_csv.py
mcp_apps/mcp_query_duckdb/data/databases/: .gitignore
mcp_apps/mcp_query_duckdb/data/datasets/caribbean/: .gitignore  config.yaml  gen_caribbean_data.py
mcp_apps/mcp_query_duckdb/data/datasets/hormuz/: config.yaml  gen_hormuz_data.py
mcp_apps/mcp_query_duckdb/data/datasets/narcotic_sources/: config.yaml  gen_narcotic_sources_data.py
mcp_apps/mcp_query_duckdb/data/datasets/south_china_sea/: .gitignore  config.yaml  gen_south_china_sea_data.py
mcp_apps/mcp_query_duckdb/data/datasets/ukraine/: config.yaml  gen_ukraine_data.py
mcp_apps/mcp_query_duckdb/mcp_server/: config.py  server.py
mcp_apps/mcp_simple_chart/: Dockerfile  pyproject.toml
mcp_apps/mcp_simple_chart/mcp_server/: server.py
mcp_registry/: docker-compose.yml
mcp_registry/config/: mcp_registry.conf
rag_kb/: docker-compose.yml
(+19 files in other folders)
