[project]
name = "helix-demo-mcp-app"
version = "0.1.0"
description = "Demo MCP App server providing interactive chart tools for the Helix MCP Apps demo."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "fastmcp>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
